--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,77 @@
+.navbar {
+    padding:0;
+    margin-bottom: 15px;
+    height: 120px;
+}
+
+.d-inline-block.align-top{
+padding: 0; 
+width: 250px;
+height: 250px;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+
+.navbar-toggler{
+padding:0;
+margin-bottom: 55px;
+height: 40px;
+width: 40px;  
+}
+
 .pos-f-t{
-    margin-bottom: 50px;
+    margin-top: 20;
+    margin-bottom: 25px;
 }
 
 .img-fluid{
+    /* box-sizing: border-box; */
     padding:0;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    width:100%;
+    height:750px;
 }
-.d-inline-block align-top{
-    padding: 0; 
-    margin-top: 0px;
-    margin-bottom: 0px;
+
+.btn {
+    position: absolute;
+    top: 80%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: transparent;
+    border-color:  white;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    cursor: pointer;
+    border-radius: 56px;
+}
+
+
+.card-img-overlay{
+color: white;
+font-size: 34px;
+padding: 12px 24px;
+}
+
+
+.btn:hover{
+    background-color: white;
+    border-color:#DDDDDD;
+    color: black;
+}
+
+
+.card-img-overlay{
+    box-sizing: border-box;
+    padding:20;
+    /* height: auto; */
+    width: auto;
+    max-width:100%; 
+    max-height:50%;
+}
+
+.card-deck{
+    padding:50px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
