--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,22 +13,37 @@ margin-bottom: 0px;
 }
 
 .navbar-toggler{
-padding:0;
-margin-bottom: 55px;
+position:absolute;
+margin-top: 25px; 
 height: 40px;
-width: 40px;  
+width: 40px; 
+/* float:  left; */
+margin-left: -650px;
+left: 50%;
+transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+background-color:transparent;
+/* padding: 12px 12px; */
+cursor: pointer;
 }
 
 .pos-f-t{
     margin-top: 20;
     margin-bottom: 25px;
+
+}
+#text{
+    color: black;
+    background-color:rgb(250, 229, 229);
+    margin-left: -20px;
+    padding-right:-10px;
+    
 }
 
 .img-fluid{
     /* box-sizing: border-box; */
-    padding:0;
     width:100%;
-    height:750px;
+    height:700px;
 }
 
 .btn {
@@ -51,6 +66,12 @@ width: 40px;
 color: white;
 font-size: 34px;
 padding: 12px 24px;
+box-sizing: border-box;
+padding:20;
+/* height: auto; */
+width: auto;
+max-width:100%; 
+max-height:50%;
 }
 
 
@@ -58,16 +79,6 @@ padding: 12px 24px;
     background-color: white;
     border-color:#DDDDDD;
     color: black;
-}
-
-
-.card-img-overlay{
-    box-sizing: border-box;
-    padding:20;
-    /* height: auto; */
-    width: auto;
-    max-width:100%; 
-    max-height:50%;
 }
 
 .card-deck{
