--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,28 @@
 .navbar {
     padding:0;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     height: 120px;
 }
 
+
+
 .d-inline-block.align-top{
-padding: 0; 
-width: 250px;
-height: 250px;
-margin-top: 0px;
-margin-bottom: 0px;
+padding-top:0; 
+/* max-width:275px; */
+/* max-height:275px;  */
+/* margin-top: -145px; */
+width: 320px;
+height: 320px;
+margin-right:180px;
 }
 
 .navbar-toggler{
 position:absolute;
-margin-top: 25px; 
+margin-top: 20px; 
 height: 40px;
 width: 40px; 
-/* float:  left; */
-margin-left: -650px;
+/* float:  left;  */
+margin-left: -600px;
 left: 50%;
 transform: translate(-50%, -50%);
 -ms-transform: translate(-50%, -50%);
@@ -32,6 +36,28 @@ cursor: pointer;
     margin-bottom: 25px;
 
 }
+
+.form-inline{
+    margin-left: 1490px;
+    margin-top: 40px;
+}
+
+ #goButton{
+    margin-left: 1520px;
+    background-color: green;
+    border-color:  green;
+    margin-top: -35px;
+    padding:10px; 
+    color:  white;
+    font-size: 16px;
+} 
+
+#navBar:hover{
+    background-color: white;
+    border-color:#DDDDDD;
+    color: black;
+}
+
 #text{
     color: black;
     background-color:rgb(250, 229, 229);
@@ -45,7 +71,18 @@ cursor: pointer;
     width:100%;
     height:700px;
 }
-
+.card-img-overlay{
+    color: white;
+    font-size: 34px;
+    padding: 12px 24px;
+    box-sizing: border-box;
+    padding:20;
+    /* height: auto; */
+    width: auto;
+    max-width:100%; 
+    max-height:50%;
+    }
+    
 .btn {
     position: absolute;
     top: 80%;
@@ -60,20 +97,6 @@ cursor: pointer;
     cursor: pointer;
     border-radius: 56px;
 }
-
-
-.card-img-overlay{
-color: white;
-font-size: 34px;
-padding: 12px 24px;
-box-sizing: border-box;
-padding:20;
-/* height: auto; */
-width: auto;
-max-width:100%; 
-max-height:50%;
-}
-
 
 .btn:hover{
     background-color: white;
