--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,6 @@
     height: 120px;
 }
 
-
-
 .d-inline-block.align-top{
 padding-top:0; 
 /* max-width:275px; */
@@ -34,7 +32,6 @@ cursor: pointer;
 .pos-f-t{
     margin-top: 20;
     margin-bottom: 25px;
-
 }
 
 .form-inline{
@@ -42,7 +39,49 @@ cursor: pointer;
     margin-top: 40px;
 }
 
- #goButton{
+#heartImage{
+    margin-left:0px;
+    height: 0px;
+    width: 0px;
+    border-radius: 0px; 
+}
+
+#facebook{
+    margin-left:0px;
+    height: 0px;
+    width: 0px;
+    border-radius: 0px;  
+}
+
+#twitter{
+    margin-left:0px;
+    height: 0px;
+    width: 0px;
+    border-radius: 0px; 
+}
+
+#pintrest{
+    margin-left:0px;
+    height: 0px;
+    width: 0px;
+    border-radius: 0px; 
+}
+
+#payPal{
+    margin-left:0px;
+    height: 0px;
+    width: 0px;
+    border-radius: 0px;  
+}
+
+#whatsapp{
+    margin-left:0px;
+    height: 0px;
+    width: 0px;
+    border-radius: 0px;    
+}
+
+#goButton{
     margin-left: 1520px;
     background-color: green;
     border-color:  green;
@@ -51,31 +90,6 @@ cursor: pointer;
     color:  white;
     font-size: 16px;
 } 
-
-#facebook{
-    height: 40px;
-    width: 40px;
-}
-#twitter{
-    height: 40px;
-    width: 40px;
-}
-#pintrest{
-    height: 40px;
-    width: 40px;
-}
-
-#payPal{
-    height: 40px;
-    width: 40px;
-}
-#whatsapp{
-    height: 40px;
-    width: 40px;
-}
-
-
-
 
 #goButton:hover{
     background-color: white;
@@ -87,8 +101,7 @@ cursor: pointer;
     color: black;
     background-color:rgb(250, 229, 229);
     margin-left: -20px;
-    padding-right:-10px;
-    
+    padding-right:-10px;    
 }
 
 .img-fluid{
@@ -96,6 +109,7 @@ cursor: pointer;
     width:100%;
     height:700px;
 }
+
 .card-img-overlay{
     color: white;
     font-size: 34px;
@@ -108,7 +122,7 @@ cursor: pointer;
     max-height:50%;
     }
     
-.btn {
+.btn{
     position: absolute;
     top: 80%;
     left: 15%;
